Implementação de Botões de ações

--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -15,3 +15,4 @@ block content
       label(for="senha") Senha
       input#senha.form-control(type="password" name="senha" required)
     button.btn.btn-primary(type="submit") Entrar
+    a.btn.btn-link(href="/registro") Criar nova conta
